chore: version 8 gradle